--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </div>
         <div class = "dropdown">
             <select id ="character-names">
-                <option selected disabled>Select a Character</option>
+                <option >Select a Character</option>
                 <!-- show characters names here -->
             </select>
         </div>
